[package]
name = "java-native-file-chooser"
version = "0.1.0"
edition = "2021"
links = "jawt"
build = "build.rs"

[lib]

crate_type = ["cdylib"]

[build-dependencies]

bindgen = "0.60.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi"] }

[dependencies]

jni = "0.19.0"
native-dialog = { git = "https://github.com/balthild/native-dialog-rs", rev = "d2ddd44" }
raw-window-handle = "0.4.3"
